[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ark_api"
version = "1.0.10"
description = "CyberArk API Collection"
authors = [
  { name = "Gonzalo Atienza Rela", email = "gonatienza@gmail.com" }
]
dependencies = [
  "keyring",
  "pyjwt"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ark_api", "ark_api.*"]
